# precog

./: .codecov.yml  .dockerignore  .env.template  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PHASE_CHECKLISTS_AND_TEMPLATES.md  README.md  SESSION_HANDOFF.md  _debug_validate_docs.txt  audit.py  codecov.yml  coverage.json  docs_files_list.txt  main.py  pyproject.toml  pytest.ini  railway.toml  requirements-phase1.txt  requirements.txt  test_warnings.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-update-pr-branches.yml  ci.yml  claude-code-review.yml  claude.yml
_archive/: CLAUDE_PROMPT_PRECOG_V1.md  DOCUMENTATION_WORKFLOW_GUIDE_V1.0.md  PHASE_1.5_DEFERRED_TASKS_V1.0.md  PHASE_1_DEFERRED_TASKS_V1.0.md  PHASE_2.5_DEFERRED_TASKS_V1.3.md  PHASE_2_TEST_COVERAGE_GAPS_V1.0.md  SESSION_SUMMARY_2025-11-09.md  SESSION_SUMMARY_2025-11-21.md  STRATEGIC_WORK_ROADMAP_V1.1.md  TESTING_GAPS_ANALYSIS.md  TOKEN_MONITORING_PROTOCOL.md
_archive/docs/: DOCUMENTATION_V2_REVIEW_GUIDE.md  ORDER_EXECUTION_ARCHITECTURE_ASSESSMENT_V1_0.md  PHASE_0.7_DEFERRED_TASKS_V1.4.md  PHASE_0_5_COMPREHENSIVE_HANDOFF_V1_0.md  PHASE_COMPLETION_ASSESSMENT_PROTOCOL_V1.0.md  PHASE_TEST_PLANNING_TEMPLATE_V1.0.md  SESSION_HANDOFF_2025-10-30_v0.md  VERSION_HEADERS_GUIDE_V2_1.md  YAML_CONSISTENCY_AUDIT_V1_0.md
_sessions/: README.md
api_connectors/: __init__.py  kalshi_auth.py  kalshi_client.py  rate_limiter.py  types.py
config/: .env.dev.template  .env.staging.template  .env.test.template  __init__.py  config_loader.py  data_sources.yaml  env.template  markets.yaml  position_management.yaml  probability_models.yaml  system.yaml  trade_strategies.yaml  trading.yaml
data/historical/: README.md
database/: __init__.py  connection.py  crud_operations.py  initialization.py
database/migrations/: 001_add_methods_and_matrix_metadata.sql  002_add_alerts_table.sql  003_add_strategy_model_attribution.sql  004_add_exit_management_columns.sql  006_add_trade_metadata_and_fix_tests.sql  008_add_external_id_traceability.sql  009_markets_surrogate_primary_key.sql
database/queries/: check_view_staleness.sql
database/seeds/: 001_nfl_teams_initial_elo.sql
docs/: CLAUDE_CODE_IMPLEMENTATION_PLAN.md  DOCUMENTATION_REFACTORING_PLAN_V1.0.md  TWO_SESSION_IMPLEMENTATION_PLAN_V1.0.md  YAML_AND_DOCS_CONSISTENCY_ANALYSIS_V1.0.md
docs/_archive/: MASTER_REQUIREMENTS_V2.3.md  TESTING_STRATEGY_V1.1.md
docs/analysis/: SCHEMA_ANALYSIS_2025-11-21.md
docs/api-integration/: API_INTEGRATION_GUIDE_V2.0.md  KALSHI_API_STRUCTURE_COMPREHENSIVE_V2.0.md  KALSHI_DATABASE_SCHEMA_CORRECTED.md  KALSHI_DECIMAL_PRICING_CHEAT_SHEET.md  KALSHI_DECIMAL_PRICING_CHEAT_SHEET_V1.0.md  KALSHI_SUBPENNY_PRICING_IMPLEMENTATION_V1.0.md  Kalshi API Technical Reference For Trading Integration.md
docs/configuration/: CONFIGURATION_GUIDE_UPDATED.md  CONFIGURATION_GUIDE_V3.0.md  CONFIGURATION_GUIDE_V3.1.md
docs/database/: CANONICAL_LAYER_RELATIONSHIPS.md  DATABASE_SCHEMA_SUMMARY_V1.10.md  DATABASE_SCHEMA_SUMMARY_V1.11.md  DATABASE_SCHEMA_SUMMARY_V1.12.md  DATABASE_SCHEMA_SUMMARY_V1.13.md  DATABASE_SCHEMA_SUMMARY_V1.14.md  DATABASE_SCHEMA_SUMMARY_V1.15.md  DATABASE_SCHEMA_SUMMARY_V1.16.md  DATABASE_SCHEMA_SUMMARY_V1.2.md  DATABASE_SCHEMA_SUMMARY_V1.5.md  DATABASE_SCHEMA_SUMMARY_V1.7.md  DATABASE_SCHEMA_SUMMARY_V1.8.md  DATABASE_SCHEMA_SUMMARY_V1.9.md  DATABASE_SCHEMA_SUMMARY_V2.0.md  DATABASE_SCHEMA_SUMMARY_V2.1.md  DATABASE_SCHEMA_SUMMARY_V2.2.md  DATABASE_SCHEMA_SUMMARY_V2.3.md  DATABASE_SCHEMA_SUMMARY_V2.4.md  DATABASE_TABLES_REFERENCE.md  LOOKUP_TABLES_DESIGN.md  ODDS_RESEARCH_COMPREHENSIVE.md  RATIONALE_MIGRATION_0051.md
docs/foundation/: ADR-107_Single_Database_Execution_Environments.md  ADR-108_Hybrid_Cloud_Architecture.md  ADR-201_Position_History_Without_SCD_Type_2.md  ADR_118_DRAFT_canonical_identity.md  ADR_119_DRAFT_business_key_and_weather.md  ADR_INDEX.md  ADR_INDEX_V1.1.md  ADR_INDEX_V1.10.md  ADR_INDEX_V1.11.md  ADR_INDEX_V1.12.md  ADR_INDEX_V1.13.md  ADR_INDEX_V1.14.md  ADR_INDEX_V1.15.md  ADR_INDEX_V1.16.md  ADR_INDEX_V1.17.md  ADR_INDEX_V1.18.md  ADR_INDEX_V1.19.md  ADR_INDEX_V1.2.md  ADR_INDEX_V1.20.md  ADR_INDEX_V1.21.md  ADR_INDEX_V1.22.md  ADR_INDEX_V1.23.md  ADR_INDEX_V1.24.md  ADR_INDEX_V1.25.md  ADR_INDEX_V1.26.md  ADR_INDEX_V1.27.md  ADR_INDEX_V1.4.md  (+168 more)
phase05 updates/: CLAUDE_CODE_HANDOFF_SUMMARY.md  CLAUDE_CODE_HANDOFF_UPDATED_V1_0.md  CLAUDE_CODE_READING_GUIDE_V1_0.md  CONFIGURATION_GUIDE_UPDATE_SPEC_V1_0.md  PHASE_0_5_COMPREHENSIVE_HANDOFF_V1_0.md  PHASE_5_EVENT_LOOP_ARCHITECTURE_V1_0.md  PHASE_8_ADVANCED_EXECUTION_SPEC.md  SESSION_8_SUMMARY.md  USER_CUSTOMIZATION_STRATEGY_V1_0.md
scripts/: align_test_db.sh  analyze_prepush_history.py  analyze_test_history.py  apply_all_migrations_to_test_db.py  apply_complete_schema_to_test_db.py  apply_migration_v1.4.py  apply_migration_v1.5.py  apply_schema.py  audit_test_type_coverage.py  backfill_enrichment.py  backfill_espn_games.py  check_migration_parity_hook.py  check_outstanding_work.sh  check_test_db_migration_parity.py  check_warning_debt.py  cleanup_frozen_processes.py  create_issues_from_reviews.py  extract_claude_review_comments.sh  fix_docs.py  fix_espn_ids.sql  fix_espn_team_ids.py  fix_yaml_floats.py  lint_adr_drift.py  lint_cli_flag_references.py  lint_doc_version_refs.py  lint_mock_target_paths.py  log_validation_results.py  migrate_imports.py  mock_path_allowlist.txt  pre-push-hook.sh  pre-push-validation.sh  reconcile_issue_tracking.sh  record_espn_cassettes.py  record_kalshi_cassettes.py  run_data_collector.py  run_parallel_checks.py  run_soak_test.py  schema_audit_live.py  seed_external_team_codes.py  seed_multi_sport_teams.py  (+29 more)
test-type-coverage-report/: test_type_coverage.json
test_results/: README.md
tests/: .loose_assertion_baseline  README.md  conftest.py  test_attribution.py  test_attribution_comprehensive.py  test_config_loader.py  test_crud_operations.py  test_database_connection.py  test_decimal_properties.py  test_error_handling.py  test_logger.py  test_lookup_tables.py
utils/: __init__.py  logger.py
(+989 files in other folders)
